--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Town Gas Project</string>
+    <string name="edittext_location">請輸入地點補充</string>
+    <string name="editTxtComment">備註欄</string>
+    <string name="btnStaffInfo">輸入員工資料</string>
+    <string name="btnDelete">刪除</string>
+    <string name="btnStart">開工</string>
+    <string name="btnEnd">收工</string>
+    <string name="confirm">確定</string>
+    <string name="cancel">取消</string>
+    <string name="clear_all">重設</string>
+    <string name="workerList">工人名單</string>
+    <string name="search">搜尋</string>
 </resources>
