--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="workerList">工人名單</string>
     <string name="search">搜尋</string>
     <string name="btnDeleteAll">全部刪除</string>
+    <string name="ok">確定</string>
+    <string name="refresh">刷新</string>
+    <string name="date">日期:</string>
+    <string name="location">位置:</string>
+    <string name="time">時間:</string>
+    <string name="regInfo">打卡資訊</string>
+    <string name="gpsSignal">信號強度:</string>
 </resources>
